overflow fix

--- a/source/sass/blocks/works.scss
+++ b/source/sass/blocks/works.scss
@@ -108,10 +108,6 @@
   }
 }
 
-.grid {
-  margin: 0 auto;
-}
-
 .grid-item {
   float: left;
   width: 100%;
