--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -10,6 +10,7 @@ html {
 
 body {
   padding: 0;
+  overflow-x: hidden;
 
   font-weight: 400;
   font-size: 12px;
